--- a/style.css
+++ b/style.css
@@ -32,18 +32,20 @@ h1 {
 }
 
 .topNav ul a {
+  border-radius: 5px;
+  box-shadow: 10px 5px 5px rgba(0,0,0,0.5);
   color: green;
   text-decoration: none;
-  padding: 10px 15px;
   background-color: white;
+  padding: 10px 15px;
   border: green 1px solid;
-  border-radius: 5px;
-  box-shadow: 10px 5px 5px rgba(0,0,0,0.2);
+  transition: all 0.5s ease-in-out;
 }
 
 .topNav ul a:hover {
-  background-color: green;
   color: white;
+  box-shadow: none;
+  background-color: green;
 }
 
 
